--- a/base/templates/contato.html
+++ b/base/templates/contato.html
@@ -81,6 +81,9 @@
 
 <main class="container">
     <h1>Fale conosco</h1>
+    <p>Envie uma mensagem através do formulário abaixo ou ligue para o telefone {{ telefone }}
+        falando com o responsável {{ responsavel | upper }}
+    </p>
     <form action="" method="post">
         <div class="row">
             <div class="col-md-6">
