--- a/base/templates/contato.html
+++ b/base/templates/contato.html
@@ -85,6 +85,7 @@
         falando com o responsável {{ responsavel | upper }}
     </p>
     <form action="" method="post">
+        {% csrf_token %}
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
@@ -101,7 +102,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="id_nome">Mensagem</label>
-                    <input cols="30" rows="30" class="form-control" id="id_mensagem" name="email">
+                    <input cols="30" rows="30" class="form-control" id="id_mensagem" name="mensagem">
                 </div>
             </div>
         </div>
