--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -49,15 +49,15 @@
     <link href="/static/blog.css" rel="stylesheet">
   </head>
   <body>
-    
+
 <div class="container">
   <header class="blog-header py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
       <div class="col-4 pt-1">
-        <a class="link-secondary" href="#">Inscreva-se</a>
+        <a class="link-secondary" href="{% url 'inscrever' %}">Inscreva-se</a>
       </div>
       <div class="col-4 text-center">
-        <a class="blog-header-logo text-dark" href="#">Eventos X</a>
+        <a class="blog-header-logo text-dark" href="{% url 'inicio' %}">Eventos X</a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
         <a class="link-secondary" href="#" aria-label="Search">
@@ -74,7 +74,7 @@
       <a class="p-2 link-secondary" href="#">Música</a>
       <a class="p-2 link-secondary" href="#">Teatro</a>
       <a class="p-2 link-secondary" href="#">Esportivo</a>
-      
+
     </nav>
   </div>
 </div>
