eventos startapp; submetendo ao bd

--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -70,11 +70,9 @@
 
   <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
-      <a class="p-2 link-secondary" href="#">Educação</a>
-      <a class="p-2 link-secondary" href="#">Música</a>
-      <a class="p-2 link-secondary" href="#">Teatro</a>
-      <a class="p-2 link-secondary" href="#">Esportivo</a>
-
+      {% for categoria in categorias %}
+      <a class="p-2 link-secondary" href="#">{{ categoria.nome }}</a>
+      {% endfor %} 
     </nav>
   </div>
 </div>
