--- a/base/templates/inicio.html
+++ b/base/templates/inicio.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
 {% block conteudo %}
-{% for dado in dados %}
+{% for evento in eventos %}
   <div class="col-md-6">
     <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
       <div class="col p-4 d-flex flex-column position-static">
-        <strong class="d-inline-block mb-2 text-primary">{{ dado.categoria }}</strong>
-        <h3 class="mb-0">{{ dado.titulo }}</h3>
-        <div class="mb-1 text-muted">{{ dado.data }}</div>
-        <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="stretched-link">Continue reading</a>
+        <strong class="d-inline-block mb-2 text-primary">{{ evento.categoria }}</strong>
+        <h3 class="mb-0">{{ evento.nome }}</h3>
+        <div class="mb-1 text-muted">{{ evento.data | date:'d/m/Y'}}</div>
+        <p class="card-text mb-auto">{{ evento.descricao }}</p>
+        <a href="{% url 'evento' evento.id %}" class="stretched-link">Continuar lendo</a>
       </div>
       <div class="col-auto d-none d-lg-block">
         <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
